force-app/main/default/objects/Work_Order_for_Spares__c/Work_Order_for_Spares__c.object-meta.xml
<CustomObject>
    <label>WorkOrder</label>
    <nameField>
        <displayFormat>WorkOrder-{mm}{dd}-{000}</displayFormat>
        <label>Work Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>