force-app/main/default/objects/Work_Order_for_Spares__c/fields/Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Name__c</fullName>
    <formula>Case__r.Account_Name__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rice Mill Name</label>
    <type>Text</type>
</CustomField>