force-app/main/default/objects/Work_Order_for_Spares__c/fields/Amt_In_words__c.field-meta.xml
<CustomField>
    <fullName>Amt_In_words__c</fullName>
    <formula>TEXT( Grand_Total__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amt In words</label>
    <type>Text</type>
</CustomField>