force-app/main/default/objects/Work_Order_for_Spares__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Cases__c</referenceTo>
    <relationshipName>Work_Order_for_Spares</relationshipName>
    <type>Lookup</type>
</CustomField>