force-app/main/default/objects/Work_Order_for_Spares__c/fields/CGST_amount__c.field-meta.xml
<CustomField>
    <fullName>CGST_amount__c</fullName>
    <formula>IF( Rice_Mill_Name__r.State__c=&apos;telengana&apos;  , 0,CGST__c * Total__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CGST amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>