force-app/main/default/objects/Work_Order_for_Spares__c/fields/Commissioning_Charges_for_each_machine__c.field-meta.xml
<CustomField>
    <fullName>Commissioning_Charges_for_each_machine__c</fullName>
    <label>Commissioning Charges for each machine</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>