force-app/main/default/objects/Work_Order_for_Spares__c/fields/Contact_Person_Mobile_Number__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Mobile_Number__c</fullName>
    <formula>Case__r.PhoneNumberNew__c+&apos;,&apos;+ Case__r.PhoneNumber2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Person Mobile Number</label>
    <type>Text</type>
</CustomField>