force-app/main/default/objects/Work_Order_for_Spares__c/fields/Contact_Person_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Person_Name__c</fullName>
    <formula>Case__r.Customer_Name__c +&apos;,&apos;+ Case__r.CustomerName2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Person Name</label>
    <type>Text</type>
</CustomField>