force-app/main/default/objects/Work_Order_for_Spares__c/fields/Forwarding_Charges_Amount__c.field-meta.xml
<CustomField>
    <fullName>Forwarding_Charges_Amount__c</fullName>
    <formula>Total_Price__c * Forwarding_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forwarding Charges Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>