force-app/main/default/objects/Work_Order_for_Spares__c/fields/GSTIN__c.field-meta.xml
<CustomField>
    <fullName>GSTIN__c</fullName>
    <formula>Case__r.Account_Name__r.GSTIN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GSTIN</label>
    <type>Text</type>
</CustomField>