force-app/main/default/objects/Work_Order_for_Spares__c/fields/HSN__c.field-meta.xml
<CustomField>
    <fullName>HSN__c</fullName>
    <label>HSN CODE</label>
    <length>36</length>
    <type>Text</type>
</CustomField>