force-app/main/default/objects/Work_Order_for_Spares__c/fields/IGST__c.field-meta.xml
<CustomField>
    <fullName>IGST__c</fullName>
    <defaultValue>0.18</defaultValue>
    <label>IGST</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>