force-app/main/default/objects/Work_Order_for_Spares__c/fields/IGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>IGST_Amount__c</fullName>
    <formula>IF( Rice_Mill_Name__r.State__c=&apos;telengana&apos; ,IGST__c * Total__c , 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IGST Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>