force-app/main/default/objects/Work_Order_for_Spares__c/fields/Issued_ON__c.field-meta.xml
<CustomField>
    <fullName>Issued_ON__c</fullName>
    <label>Issued ON</label>
    <type>Date</type>
</CustomField>