force-app/main/default/objects/Work_Order_for_Spares__c/fields/Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Line_Items__c</fullName>
    <label>Line Items</label>
    <summaryForeignKey>WorkOrderSparesLine__c.Work_Order_for_Spares__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>