force-app/main/default/objects/Work_Order_for_Spares__c/fields/MachineNumber__c.field-meta.xml
<CustomField>
    <fullName>MachineNumber__c</fullName>
    <formula>Case__r.Machine_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Machine Number</label>
    <type>Text</type>
</CustomField>