force-app/main/default/objects/Work_Order_for_Spares__c/fields/Mill_Address__c.field-meta.xml
<CustomField>
    <fullName>Mill_Address__c</fullName>
    <formula>Case__r.Account_Name__r.Street__c+&apos;,&apos;+Case__r.Account_Name__r.District__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mill Address</label>
    <type>Text</type>
</CustomField>