force-app/main/default/objects/Work_Order_for_Spares__c/fields/Packing_Charges__c.field-meta.xml
<CustomField>
    <fullName>Packing_Charges__c</fullName>
    <defaultValue>0.001</defaultValue>
    <label>Packing Charges</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>