force-app/main/default/objects/Work_Order_for_Spares__c/fields/Packing_Charges_Amount__c.field-meta.xml
<CustomField>
    <fullName>Packing_Charges_Amount__c</fullName>
    <formula>Total_Price__c * Packing_Charges__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Packing Charges Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>