force-app/main/default/objects/Work_Order_for_Spares__c/fields/PAN_No__c.field-meta.xml
<CustomField>
    <fullName>PAN_No__c</fullName>
    <label>PAN No.</label>
    <length>10</length>
    <type>Text</type>
</CustomField>