force-app/main/default/objects/Work_Order_for_Spares__c/fields/Product_Machine_Number__c.field-meta.xml
<CustomField>
    <fullName>Product_Machine_Number__c</fullName>
    <formula>Case__r.Machine_No__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product/Machine Number</label>
    <type>Text</type>
</CustomField>