force-app/main/default/objects/Work_Order_for_Spares__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <label>ProductCode</label>
    <length>36</length>
    <type>Text</type>
</CustomField>