force-app/main/default/objects/Work_Order_for_Spares__c/fields/Required_On__c.field-meta.xml
<CustomField>
    <fullName>Required_On__c</fullName>
    <label>Required On or Before</label>
    <type>Date</type>
</CustomField>