force-app/main/default/objects/Work_Order_for_Spares__c/fields/Rice_Mill_Name__c.field-meta.xml
<CustomField>
    <fullName>Rice_Mill_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rice Mill Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Work_Order_for_Spares</relationshipName>
    <type>Lookup</type>
</CustomField>