force-app/main/default/objects/Work_Order_for_Spares__c/fields/SGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>SGST_Amount__c</fullName>
    <formula>IF( Rice_Mill_Name__r.State__c=&apos;telengana&apos;  , 0,SGST__c * Total__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SGST Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>