force-app/main/default/objects/Work_Order_for_Spares__c/fields/Spare_Description__c.field-meta.xml
<CustomField>
    <fullName>Spare_Description__c</fullName>
    <label>Spare Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>