force-app/main/default/objects/Work_Order_for_Spares__c/fields/SubTotal__c.field-meta.xml
<CustomField>
    <fullName>SubTotal__c</fullName>
    <label>SubTotal</label>
    <summarizedField>WorkOrderSparesLine__c.Quantity__c</summarizedField>
    <summaryForeignKey>WorkOrderSparesLine__c.Work_Order_for_Spares__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>