force-app/main/default/objects/Work_Order_for_Spares__c/fields/TCS__c.field-meta.xml
<CustomField>
    <fullName>TCS__c</fullName>
    <label>TCS</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>