force-app/main/default/objects/Work_Order_for_Spares__c/fields/Terms_And_Condition__c.field-meta.xml
<CustomField>
    <fullName>Terms_And_Condition__c</fullName>
    <defaultValue>&quot;1. Spare component drawings are should be enclosed along with work order&quot;+
&quot;2. Service stamp should be on drawings.&quot;+
&quot;3. QC Inspection should be done 100% and maintained Inspection report.&quot;+
&quot;4. Final Product / Components are to be handover to Service department by QC department&quot;+
&quot;5. All documents are to be handover to Service department like A) Work order x-rax copy. B) Inspection report x-rax copy C) Drawings&quot;+
&quot;6. Service Concern should file all the above (Sl No.5) documents properly with identification. &quot;</defaultValue>
    <label>Terms And Condition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>