force-app/main/default/objects/Work_Order_for_Spares__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>Total_Price__c + Packing_Charges_Amount__c + Forwarding_Charges_Amount__c + Commissioning_Charges_for_each_machine__c + Transit_Insurance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>