force-app/main/default/objects/Work_Order_for_Spares__c/fields/Total_Price__c.field-meta.xml
<CustomField>
    <fullName>Total_Price__c</fullName>
    <label>Basic Order Value</label>
    <summarizedField>WorkOrderSparesLine__c.TPrice__c</summarizedField>
    <summaryForeignKey>WorkOrderSparesLine__c.Work_Order_for_Spares__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>