force-app/main/default/objects/Work_Order_for_Spares__c/fields/Transit_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Transit_Insurance__c</fullName>
    <label>Transit Insurance</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>