force-app/main/default/objects/Work_Order_for_Spares__c/recordTypes/ForNewRecWO.recordType-meta.xml
<RecordType>
    <fullName>ForNewRecWO</fullName>
    <active>true</active>
    <label>Create New Work Order</label>
</RecordType>