force-app/main/default/objects/Work_Order_for_Spares__c/recordTypes/Record_Detail_Page.recordType-meta.xml
<RecordType>
    <fullName>Record_Detail_Page</fullName>
    <active>false</active>
    <label>Record Detail Page</label>
</RecordType>